// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Диалог подтверждения рендеринг с двумя кнопками 1`] = `
<lego-components_modal
  classname="dialog confirmation-dialog "
  keepmounted="false"
  onanimationend="function () { [native code] }"
  onclose="function onClose() {}"
  onrender="function () { [native code] }"
  theme="normal"
  visible="false"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      some title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function onClose() {}"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="confirmation-dialog__content"
      >
        inner text
      </div>
      <div
        class="confirmation-dialog__footer"
      >
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_cancel "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="default"
        >
          cancel text
        </lego-components_button>
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_submit "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="action"
        >
          submit text
        </lego-components_button>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог подтверждения рендеринг с двумя кнопками, progress=true 1`] = `
<lego-components_modal
  classname="dialog confirmation-dialog "
  keepmounted="false"
  onanimationend="function () { [native code] }"
  onclose="function onClose() {}"
  onrender="function () { [native code] }"
  theme="normal"
  visible="false"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      some title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function onClose() {}"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="confirmation-dialog__content"
      >
        inner text
      </div>
      <div
        class="confirmation-dialog__footer"
      >
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_cancel "
          disabled="true"
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="default"
        >
          cancel text
        </lego-components_button>
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_submit "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          progress="true"
          size="m"
          view="action"
        >
          submit text
        </lego-components_button>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог подтверждения рендеринг с двумя кнопками, submitDisabled=true 1`] = `
<lego-components_modal
  classname="dialog confirmation-dialog "
  keepmounted="false"
  onanimationend="function () { [native code] }"
  onclose="function onClose() {}"
  onrender="function () { [native code] }"
  theme="normal"
  visible="false"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      some title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function onClose() {}"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="confirmation-dialog__content"
      >
        inner text
      </div>
      <div
        class="confirmation-dialog__footer"
      >
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_cancel "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="default"
        >
          cancel text
        </lego-components_button>
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_submit "
          disabled="true"
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="action"
        >
          submit text
        </lego-components_button>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог подтверждения рендеринг с двумя кнопками, кнопка отмены - активная 1`] = `
<lego-components_modal
  classname="dialog confirmation-dialog "
  keepmounted="false"
  onanimationend="function () { [native code] }"
  onclose="function onClose() {}"
  onrender="function () { [native code] }"
  theme="normal"
  visible="false"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      some title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function onClose() {}"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="confirmation-dialog__content"
      >
        inner text
      </div>
      <div
        class="confirmation-dialog__footer"
      >
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_cancel "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="action"
        >
          cancel text
        </lego-components_button>
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_submit "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="default"
        >
          submit text
        </lego-components_button>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог подтверждения рендеринг с одной кнопкой 1`] = `
<lego-components_modal
  classname="dialog confirmation-dialog "
  keepmounted="false"
  onanimationend="function () { [native code] }"
  onclose="function onClose() {}"
  onrender="function () { [native code] }"
  theme="normal"
  visible="false"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      some title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function onClose() {}"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="confirmation-dialog__content"
      >
        inner text
      </div>
      <div
        class="confirmation-dialog__footer"
      >
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_submit "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="action"
        >
          submit text
        </lego-components_button>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог подтверждения рендеринг с тремя кнопками 1`] = `
<lego-components_modal
  classname="dialog confirmation-dialog "
  keepmounted="false"
  onanimationend="function () { [native code] }"
  onclose="function onClose() {}"
  onrender="function () { [native code] }"
  theme="normal"
  visible="false"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      some title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function onClose() {}"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="confirmation-dialog__content"
      >
        inner text
      </div>
      <div
        class="confirmation-dialog__footer"
      >
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_cancel "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="default"
        >
          cancel text
        </lego-components_button>
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_extra "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="default"
        >
          extra text
        </lego-components_button>
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_submit "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="action"
        >
          submit text
        </lego-components_button>
      </div>
    </div>
  </div>
</lego-components_modal>
`;

exports[`Диалог подтверждения рендеринг с тремя кнопками, дополнительная кнопка - активная 1`] = `
<lego-components_modal
  classname="dialog confirmation-dialog "
  keepmounted="false"
  onanimationend="function () { [native code] }"
  onclose="function onClose() {}"
  onrender="function () { [native code] }"
  theme="normal"
  visible="false"
>
  <div
    class="dialog__wrap"
  >
    <h2
      class="dialog__title"
      tabindex="0"
    >
      some title
    </h2>
    <lego-components_button
      classname="dialog__close"
      icon="function icon(className) {
          return /*#__PURE__*/_react[\\"default\\"].createElement(_close[\\"default\\"], {
            cls: className,
            iconSize: \\"m\\"
          });
        }"
      onclick="function onClose() {}"
      size="s"
      view="clear"
    />
    <div
      class="dialog__body"
    >
      <div
        class="confirmation-dialog__content"
      >
        inner text
      </div>
      <div
        class="confirmation-dialog__footer"
      >
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_cancel "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="default"
        >
          cancel text
        </lego-components_button>
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_extra "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="action"
        >
          extra text
        </lego-components_button>
        <lego-components_button
          classname="confirmation-dialog__button confirmation-dialog__button_submit "
          innerref="function () { [native code] }"
          onclick="function noop() {
  // No operation performed.
}"
          size="m"
          view="default"
        >
          submit text
        </lego-components_button>
      </div>
    </div>
  </div>
</lego-components_modal>
`;
